Modulo-4-Ciencia-Da-Computacao/Introducao-e-aprendendo-Python/1
carolina@carolina-Inspiron-3501 ~/Trybe/Trybe-exercícios/Modulo-4-Ciencia-Da-Computacao/Introducao-e-aprendendo-Python
 % python3
Python 3.8.10 (default, Jun 22 2022, 20:18:18) 
[GCC 9.4.0] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> 2 + 2
4
>>> 2 -1
1
>>> 2 / 2
1.0
>>> 3 / 2
1.5
>>> 3 // 3
1
>>> 3 // 2
1
>>> 
>>> 2 * 2
4
>>> 2 ** 10
1024
>>>  counter = 10
  File "<stdin>", line 1
    counter = 10
    ^
IndentationError: unexpected indent
>>> counter
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'counter' is not defined
>>> counter = 10
>>> counter
10
>>>  counter += 1
  File "<stdin>", line 1
    counter += 1
    ^
IndentationError: unexpected indent
>>>  counter += 1
  File "<stdin>", line 1
    counter += 1
    ^
IndentationError: unexpected indent
>>> counter +=1
>>> counter
11
>>> counter +=10
>>> counter
21
>>> counter -= 5
>>> counter
16
>>> 10 < 18
True
>>> 18 > 13
True
>>> 18 < 3
False
>>> true and false
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'true' is not defined
>>> True and False
False
>>> False or True
True
>>> 18 < temperatura < 25
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'temperatura' is not defined
>>> temperatura < 25 and temperatura > 18
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'temperatura' is not defined
>>> temperatura 15
  File "<stdin>", line 1
    temperatura 15
                ^
SyntaxError: invalid syntax
>>> temperatura  = 15
>>> temperatura < 25 and temperatura > 18
False
>>> 
